@@ -32,6 +32,7 @@
 
 package loci.formats;
 
+import java.io.File;
 import java.io.IOException;
 import java.util.ArrayList;
 import java.util.LinkedHashSet;
@@ -47,7 +48,9 @@ import loci.common.RandomAccessInputStream;
 import loci.common.services.DependencyException;
 import loci.common.services.ServiceException;
 import loci.common.services.ServiceFactory;
+import loci.formats.in.DynamicMetadataOptions;
 import loci.formats.in.MetadataLevel;
+import loci.formats.in.MetadataOptions;
 import loci.formats.meta.DummyMetadata;
 import loci.formats.meta.FilterMetadata;
 import loci.formats.meta.IMetadata;
@@ -242,8 +245,24 @@ public abstract class FormatReader extends FormatHandler
     // reinitialize the MetadataStore
     // NB: critical for metadata conversion to work properly!
     getMetadataStore().createRoot();
+
+    String optionsFile = DynamicMetadataOptions.getMetadataOptionsFile(id);
+    if (optionsFile != null) {
+      MetadataOptions options = getMetadataOptions();
+      if (options != null && options instanceof DynamicMetadataOptions) {
+        ((DynamicMetadataOptions) options).loadOptions(optionsFile, getAvailableOptions());
+      }
+    }
   }
 
+  /** Returns the list of available metadata options. */
+  protected ArrayList<String> getAvailableOptions() {
+    ArrayList<String> optionsList = new ArrayList<String>();
+    optionsList.add(DynamicMetadataOptions.METADATA_LEVEL_KEY);
+    optionsList.add(DynamicMetadataOptions.READER_VALIDATE_KEY);
+    return optionsList;
+  }
+  
   /** Returns true if the given file name is in the used files list. */
   protected boolean isUsedFile(String file) {
     String[] usedFiles = getUsedFiles();
@@ -323,42 +342,42 @@ public abstract class FormatReader extends FormatHandler
 
   /** Adds an entry to the global metadata table. */
   protected void addGlobalMeta(String key, boolean value) {
-    addGlobalMeta(key, new Boolean(value));
+    addGlobalMeta(key, Boolean.valueOf(value));
   }
 
   /** Adds an entry to the global metadata table. */
   protected void addGlobalMeta(String key, byte value) {
-    addGlobalMeta(key, new Byte(value));
+    addGlobalMeta(key, Byte.valueOf(value));
   }
 
   /** Adds an entry to the global metadata table. */
   protected void addGlobalMeta(String key, short value) {
-    addGlobalMeta(key, new Short(value));
+    addGlobalMeta(key, Short.valueOf(value));
   }
 
   /** Adds an entry to the global metadata table. */
   protected void addGlobalMeta(String key, int value) {
-    addGlobalMeta(key, new Integer(value));
+    addGlobalMeta(key, Integer.valueOf(value));
   }
 
   /** Adds an entry to the global metadata table. */
   protected void addGlobalMeta(String key, long value) {
-    addGlobalMeta(key, new Long(value));
+    addGlobalMeta(key, Long.valueOf(value));
   }
 
   /** Adds an entry to the global metadata table. */
   protected void addGlobalMeta(String key, float value) {
-    addGlobalMeta(key, new Float(value));
+    addGlobalMeta(key, Float.valueOf(value));
   }
 
   /** Adds an entry to the global metadata table. */
   protected void addGlobalMeta(String key, double value) {
-    addGlobalMeta(key, new Double(value));
+    addGlobalMeta(key, Double.valueOf(value));
   }
 
   /** Adds an entry to the global metadata table. */
   protected void addGlobalMeta(String key, char value) {
-    addGlobalMeta(key, new Character(value));
+    addGlobalMeta(key, Character.valueOf(value));
   }
 
   /** Gets a value from the global metadata table. */
@@ -377,11 +396,9 @@ public abstract class FormatReader extends FormatHandler
   protected void addMetaList(String key, Object value,
     Hashtable<String, Object> meta)
   {
-    Vector list = (Vector) meta.get(key);
-    meta.remove(key);
+    Vector list = (Vector) meta.remove(key);
     addMeta(key, value, meta);
-    Object newValue = meta.get(key);
-    meta.remove(key);
+    Object newValue = meta.remove(key);
     if (newValue != null) {
       if (list == null) {
         list = new Vector();
@@ -412,7 +429,7 @@ public abstract class FormatReader extends FormatHandler
    * and the value will be appended to the list.
    */
   protected void addSeriesMetaList(String key, Object value) {
-    addMetaList(key, value, core.get(getCoreIndex()).seriesMetadata);
+    addMetaList(key, value, getCurrentCore().seriesMetadata);
   }
 
   /**
@@ -435,7 +452,7 @@ public abstract class FormatReader extends FormatHandler
    * will be the original key with the list index appended.
    * @param meta the hashtable from which to remove lists
    */
-  private void updateMetadataLists(Hashtable<String, Object> meta) {
+  protected void updateMetadataLists(Hashtable<String, Object> meta) {
     String[] keys = meta.keySet().toArray(new String[meta.size()]);
     for (String key : keys) {
       Object v = meta.get(key);
@@ -458,52 +475,52 @@ public abstract class FormatReader extends FormatHandler
 
   /** Adds an entry to the metadata table for the current series. */
   protected void addSeriesMeta(String key, Object value) {
-    addMeta(key, value, core.get(getCoreIndex()).seriesMetadata);
+    addMeta(key, value, getCurrentCore().seriesMetadata);
   }
 
   /** Adds an entry to the metadata table for the current series. */
   protected void addSeriesMeta(String key, boolean value) {
-    addSeriesMeta(key, new Boolean(value));
+    addSeriesMeta(key, Boolean.valueOf(value));
   }
 
   /** Adds an entry to the metadata table for the current series. */
   protected void addSeriesMeta(String key, byte value) {
-    addSeriesMeta(key, new Byte(value));
+    addSeriesMeta(key, Byte.valueOf(value));
   }
 
   /** Adds an entry to the metadata table for the current series. */
   protected void addSeriesMeta(String key, short value) {
-    addSeriesMeta(key, new Short(value));
+    addSeriesMeta(key, Short.valueOf(value));
   }
 
   /** Adds an entry to the metadata table for the current series. */
   protected void addSeriesMeta(String key, int value) {
-    addSeriesMeta(key, new Integer(value));
+    addSeriesMeta(key, Integer.valueOf(value));
   }
 
   /** Adds an entry to the metadata table for the current series. */
   protected void addSeriesMeta(String key, long value) {
-    addSeriesMeta(key, new Long(value));
+    addSeriesMeta(key, Long.valueOf(value));
   }
 
   /** Adds an entry to the metadata table for the current series. */
   protected void addSeriesMeta(String key, float value) {
-    addSeriesMeta(key, new Float(value));
+    addSeriesMeta(key, Float.valueOf(value));
   }
 
   /** Adds an entry to the metadata table for the current series. */
   protected void addSeriesMeta(String key, double value) {
-    addSeriesMeta(key, new Double(value));
+    addSeriesMeta(key, Double.valueOf(value));
   }
 
   /** Adds an entry to the metadata table for the current series. */
   protected void addSeriesMeta(String key, char value) {
-    addSeriesMeta(key, new Character(value));
+    addSeriesMeta(key, Character.valueOf(value));
   }
 
   /** Gets an entry from the metadata table for the current series. */
   protected Object getSeriesMeta(String key) {
-    return core.get(getCoreIndex()).seriesMetadata.get(key);
+    return getCurrentCore().seriesMetadata.get(key);
   }
 
   /** Reads a raw plane from disk. */
@@ -526,23 +543,23 @@ public abstract class FormatReader extends FormatHandler
     }
     else if (x == 0 && w == getSizeX() && scanlinePad == 0) {
       if (isInterleaved()) {
-        s.skipBytes(y * w * bpp * c);
+        s.skipBytes((long) y * w * bpp * c);
         s.read(buf, 0, h * w * bpp * c);
       }
       else {
         int rowLen = w * bpp;
         for (int channel=0; channel<c; channel++) {
-          s.skipBytes(y * rowLen);
+          s.skipBytes((long) y * rowLen);
           s.read(buf, channel * h * rowLen, h * rowLen);
           if (channel < c - 1) {
             // no need to skip bytes after reading final channel
-            s.skipBytes((getSizeY() - y - h) * rowLen);
+            s.skipBytes((long) (getSizeY() - y - h) * rowLen);
           }
         }
       }
     }
     else {
-      int scanlineWidth = getSizeX() + scanlinePad;
+      long scanlineWidth = getSizeX() + scanlinePad;
       if (isInterleaved()) {
         s.skipBytes(y * scanlineWidth * bpp * c);
         for (int row=0; row<h; row++) {
@@ -610,11 +627,8 @@ public abstract class FormatReader extends FormatHandler
 
     // suffix matching was inconclusive; we need to analyze the file contents
     if (!open) return false; // not allowed to open any files
-    try {
-      RandomAccessInputStream stream = new RandomAccessInputStream(name);
-      boolean isThisType = isThisType(stream);
-      stream.close();
-      return isThisType;
+    try (RandomAccessInputStream stream = new RandomAccessInputStream(name)) {
+      return isThisType(stream);
     }
     catch (IOException exc) {
       LOGGER.debug("", exc);
@@ -625,11 +639,8 @@ public abstract class FormatReader extends FormatHandler
   /* @see IFormatReader#isThisType(byte[]) */
   @Override
   public boolean isThisType(byte[] block) {
-    try {
-      RandomAccessInputStream stream = new RandomAccessInputStream(block);
-      boolean isThisType = isThisType(stream);
-      stream.close();
-      return isThisType;
+    try (RandomAccessInputStream stream = new RandomAccessInputStream(block)) {
+      return isThisType(stream);
     }
     catch (IOException e) {
       LOGGER.debug("", e);
@@ -647,67 +658,67 @@ public abstract class FormatReader extends FormatHandler
   @Override
   public int getImageCount() {
     FormatTools.assertId(currentId, true, 1);
-    return core.get(getCoreIndex()).imageCount;
+    return getCurrentCore().imageCount;
   }
 
   /* @see IFormatReader#isRGB() */
   @Override
   public boolean isRGB() {
     FormatTools.assertId(currentId, true, 1);
-    return core.get(getCoreIndex()).rgb;
+    return getCurrentCore().rgb;
   }
 
   /* @see IFormatReader#getSizeX() */
   @Override
   public int getSizeX() {
     FormatTools.assertId(currentId, true, 1);
-    return core.get(getCoreIndex()).sizeX;
+    return getCurrentCore().sizeX;
   }
 
   /* @see IFormatReader#getSizeY() */
   @Override
   public int getSizeY() {
     FormatTools.assertId(currentId, true, 1);
-    return core.get(getCoreIndex()).sizeY;
+    return getCurrentCore().sizeY;
   }
 
   /* @see IFormatReader#getSizeZ() */
   @Override
   public int getSizeZ() {
     FormatTools.assertId(currentId, true, 1);
-    return core.get(getCoreIndex()).sizeZ;
+    return getCurrentCore().sizeZ;
   }
 
   /* @see IFormatReader#getSizeC() */
   @Override
   public int getSizeC() {
     FormatTools.assertId(currentId, true, 1);
-    return core.get(getCoreIndex()).sizeC;
+    return getCurrentCore().sizeC;
   }
 
   /* @see IFormatReader#getSizeT() */
   @Override
   public int getSizeT() {
     FormatTools.assertId(currentId, true, 1);
-    return core.get(getCoreIndex()).sizeT;
+    return getCurrentCore().sizeT;
   }
 
   /* @see IFormatReader#getPixelType() */
   @Override
   public int getPixelType() {
     FormatTools.assertId(currentId, true, 1);
-    return core.get(getCoreIndex()).pixelType;
+    return getCurrentCore().pixelType;
   }
 
   /* @see IFormatReader#getBitsPerPixel() */
   @Override
   public int getBitsPerPixel() {
     FormatTools.assertId(currentId, true, 1);
-    if (core.get(getCoreIndex()).bitsPerPixel == 0) {
-      core.get(getCoreIndex()).bitsPerPixel =
+    if (getCurrentCore().bitsPerPixel == 0) {
+      getCurrentCore().bitsPerPixel =
         FormatTools.getBytesPerPixel(getPixelType()) * 8;
     }
-    return core.get(getCoreIndex()).bitsPerPixel;
+    return getCurrentCore().bitsPerPixel;
   }
 
   /* @see IFormatReader#getEffectiveSizeC() */
@@ -731,14 +742,14 @@ public abstract class FormatReader extends FormatHandler
   @Override
   public boolean isIndexed() {
     FormatTools.assertId(currentId, true, 1);
-    return core.get(getCoreIndex()).indexed;
+    return getCurrentCore().indexed;
   }
 
   /* @see IFormatReader#isFalseColor() */
   @Override
   public boolean isFalseColor() {
     FormatTools.assertId(currentId, true, 1);
-    return core.get(getCoreIndex()).falseColor;
+    return getCurrentCore().falseColor;
   }
 
   /* @see IFormatReader#get8BitLookupTable() */
@@ -757,28 +768,28 @@ public abstract class FormatReader extends FormatHandler
   @Override
   public Modulo getModuloZ() {
     FormatTools.assertId(currentId, true, 1);
-    return core.get(getCoreIndex()).moduloZ;
+    return getCurrentCore().moduloZ;
   }
 
   /* @see IFormatReader#getModuloC() */
   @Override
   public Modulo getModuloC() {
     FormatTools.assertId(currentId, true, 1);
-    return core.get(getCoreIndex()).moduloC;
+    return getCurrentCore().moduloC;
   }
 
   /* @see IFormatReader#getModuloT() */
   @Override
   public Modulo getModuloT() {
     FormatTools.assertId(currentId, true, 1);
-    return core.get(getCoreIndex()).moduloT;
+    return getCurrentCore().moduloT;
   }
 
   /* @see IFormatReader#getThumbSizeX() */
   @Override
   public int getThumbSizeX() {
     FormatTools.assertId(currentId, true, 1);
-    if (core.get(getCoreIndex()).thumbSizeX == 0) {
+    if (getCurrentCore().thumbSizeX == 0) {
       int sx = getSizeX();
       int sy = getSizeY();
       int thumbSizeX = 0;
@@ -789,14 +800,14 @@ public abstract class FormatReader extends FormatHandler
       if (thumbSizeX == 0) thumbSizeX = 1;
       return thumbSizeX;
     }
-    return core.get(getCoreIndex()).thumbSizeX;
+    return getCurrentCore().thumbSizeX;
   }
 
   /* @see IFormatReader#getThumbSizeY() */
   @Override
   public int getThumbSizeY() {
     FormatTools.assertId(currentId, true, 1);
-    if (core.get(getCoreIndex()).thumbSizeY == 0) {
+    if (getCurrentCore().thumbSizeY == 0) {
       int sx = getSizeX();
       int sy = getSizeY();
       int thumbSizeY = 1;
@@ -807,35 +818,35 @@ public abstract class FormatReader extends FormatHandler
       if (thumbSizeY == 0) thumbSizeY = 1;
       return thumbSizeY;
     }
-    return core.get(getCoreIndex()).thumbSizeY;
+    return getCurrentCore().thumbSizeY;
   }
 
   /* @see IFormatReader.isLittleEndian() */
   @Override
   public boolean isLittleEndian() {
     FormatTools.assertId(currentId, true, 1);
-    return core.get(getCoreIndex()).littleEndian;
+    return getCurrentCore().littleEndian;
   }
 
   /* @see IFormatReader#getDimensionOrder() */
   @Override
   public String getDimensionOrder() {
     FormatTools.assertId(currentId, true, 1);
-    return core.get(getCoreIndex()).dimensionOrder;
+    return getCurrentCore().dimensionOrder;
   }
 
   /* @see IFormatReader#isOrderCertain() */
   @Override
   public boolean isOrderCertain() {
     FormatTools.assertId(currentId, true, 1);
-    return core.get(getCoreIndex()).orderCertain;
+    return getCurrentCore().orderCertain;
   }
 
   /* @see IFormatReader#isThumbnailSeries() */
   @Override
   public boolean isThumbnailSeries() {
     FormatTools.assertId(currentId, true, 1);
-    return core.get(getCoreIndex()).thumbnail;
+    return getCurrentCore().thumbnail;
   }
 
   /* @see IFormatReader#isInterleaved() */
@@ -848,7 +859,7 @@ public abstract class FormatReader extends FormatHandler
   @Override
   public boolean isInterleaved(int subC) {
     FormatTools.assertId(currentId, true, 1);
-    return core.get(getCoreIndex()).interleaved;
+    return getCurrentCore().interleaved;
   }
 
   /* @see IFormatReader#openBytes(int) */
@@ -878,7 +889,7 @@ public abstract class FormatReader extends FormatHandler
     }
     catch (IllegalArgumentException e) {
       throw new FormatException("Image plane too large. Only 2GB of data can " +
-        "be extracted at one time. You can workaround the problem by opening " +
+        "be extracted at one time. You can work around the problem by opening " +
         "the plane in tiles; for further details, see: " +
         "https://docs.openmicroscopy.org/bio-formats/" + FormatTools.VERSION +
         "/about/bug-reporting.html#common-issues-to-check", e);
@@ -969,7 +980,7 @@ public abstract class FormatReader extends FormatHandler
   @Override
   public boolean isMetadataComplete() {
     FormatTools.assertId(currentId, true, 1);
-    return core.get(getCoreIndex()).metadataComplete;
+    return getCurrentCore().metadataComplete;
   }
 
   /* @see IFormatReader#setNormalized(boolean) */
@@ -1007,25 +1018,35 @@ public abstract class FormatReader extends FormatHandler
   /* @see IFormatReader#getUsedFiles() */
   @Override
   public String[] getUsedFiles(boolean noPixels) {
-    String[] seriesUsedFiles;
+    String[] seriesUsedFiles;    
+    Set<String> files = new LinkedHashSet<String>();
+
     int seriesCount = getSeriesCount();
     if (seriesCount == 1) {
       seriesUsedFiles = getSeriesUsedFiles(noPixels);
       if (null == seriesUsedFiles) {
         seriesUsedFiles = new String[] {};
       }
-      return seriesUsedFiles;
+      files.addAll(Arrays.asList(seriesUsedFiles));
     }
-    int oldSeries = getSeries();
-    Set<String> files = new LinkedHashSet<String>();
-    for (int i = 0; i < seriesCount; i++) {
-      setSeries(i);
-      seriesUsedFiles = getSeriesUsedFiles(noPixels);
-      if (seriesUsedFiles != null) {
-        files.addAll(Arrays.asList(seriesUsedFiles));
+    else {
+      int oldSeries = getSeries();
+  
+      for (int i = 0; i < seriesCount; i++) {
+        setSeries(i);
+        seriesUsedFiles = getSeriesUsedFiles(noPixels);
+        if (seriesUsedFiles != null) {
+          files.addAll(Arrays.asList(seriesUsedFiles));
+        }
       }
+      setSeries(oldSeries);
     }
-    setSeries(oldSeries);
+
+    String optionsFile = DynamicMetadataOptions.getMetadataOptionsFile(currentId);
+    if (optionsFile != null && new Location(optionsFile).exists()) {
+      files.add(optionsFile);
+    }
+
     return files.toArray(new String[files.size()]);
   }
 
@@ -1131,10 +1152,10 @@ public abstract class FormatReader extends FormatHandler
   @Override
   public Hashtable<String, Object> getSeriesMetadata() {
     FormatTools.assertId(currentId, true, 1);
-    if (core.get(getCoreIndex()).seriesMetadata.size() > 0) {
+    if (getCurrentCore().seriesMetadata.size() > 0) {
       flattenHashtables();
     }
-    return core.get(getCoreIndex()).seriesMetadata;
+    return getCurrentCore().seriesMetadata;
   }
 
   /* @see IFormatReader#getCoreMetadataList() */
@@ -1378,10 +1399,10 @@ public abstract class FormatReader extends FormatHandler
   }
 
   /**
-   * Initializes a reader from the input file name.
+   * Initialize a reader from the input file name.
    *
-   * Calls {@link #initFile(String id)} to initializes the input file, reads
-   * all of the metadata and sets the reader up for reading planes.
+   * Call {@link #initFile(String id)} to initialize the input file, read
+   * all of the metadata and set the reader up for reading planes.
    * The performance of this method depends on the format and can be up to
    * several minutes for large file sets.
    *
@@ -1389,7 +1410,10 @@ public abstract class FormatReader extends FormatHandler
    */
   @Override
   public void setId(String id) throws FormatException, IOException {
-    LOGGER.debug("{} initializing {}", this.getClass().getSimpleName(), id);
+    if (!isOmero(id)) {
+      LOGGER.debug("{} initializing {}", this.getClass().getSimpleName(), id);
+    }
+    
 
     if (currentId == null || !new Location(id).getAbsolutePath().equals(
       new Location(currentId).getAbsolutePath()))
@@ -1401,8 +1425,7 @@ public abstract class FormatReader extends FormatHandler
         if (store instanceof OMEXMLMetadata) {
           setupService();
           Hashtable<String, Object> allMetadata =
-            new Hashtable<String, Object>();
-          allMetadata.putAll(metadata);
+            new Hashtable<>(metadata);
 
           for (int series=0; series<getSeriesCount(); series++) {
             String name = "Series " + series;
@@ -1442,7 +1465,7 @@ public abstract class FormatReader extends FormatHandler
             getModuloT().length() > 1)
           {
             service.addModuloAlong(
-              (OMEXMLMetadata) store, core.get(series), series);
+              (OMEXMLMetadata) store, getCurrentCore(), series);
           }
         }
         setSeries(0);
@@ -1469,6 +1492,15 @@ public abstract class FormatReader extends FormatHandler
     close(false);
   }
 
+  /**
+   * Get the CoreMetadata corresponding to the current series and resolution
+   *
+   * @return the CoreMetadata
+   */
+  protected CoreMetadata getCurrentCore() {
+    return core.get(getCoreIndex());
+  }
+
   // -- Metadata enumeration convenience methods --
 
   /**
@@ -1477,17 +1509,12 @@ public abstract class FormatReader extends FormatHandler
    *
    * @throws ome.xml.model.enums.EnumerationException if an appropriate
    *  enumeration value is not found.
+   * @deprecated Use {@link MetadataTools#getAcquisitionMode(String)}.
    */
+  @Deprecated
   protected AcquisitionMode getAcquisitionMode(String value)
-    throws FormatException
-  {
-    AcquisitionModeEnumHandler handler = new AcquisitionModeEnumHandler();
-    try {
-      return (AcquisitionMode) handler.getEnumeration(value);
-    }
-    catch (EnumerationException e) {
-      throw new FormatException("AcquisitionMode creation failed", e);
-    }
+    throws FormatException {
+    return MetadataTools.getAcquisitionMode(value);
   }
 
   /**
@@ -1496,15 +1523,11 @@ public abstract class FormatReader extends FormatHandler
    *
    * @throws ome.xml.model.enums.EnumerationException if an appropriate
    *  enumeration value is not found.
+   * @deprecated Use {@link MetadataTools#getArcType(String)}.
    */
+  @Deprecated
   protected ArcType getArcType(String value) throws FormatException {
-    ArcTypeEnumHandler handler = new ArcTypeEnumHandler();
-    try {
-      return (ArcType) handler.getEnumeration(value);
-    }
-    catch (EnumerationException e) {
-      throw new FormatException("ArcType creation failed", e);
-    }
+    return MetadataTools.getArcType(value);
   }
 
   /**
@@ -1513,15 +1536,11 @@ public abstract class FormatReader extends FormatHandler
    *
    * @throws ome.xml.model.enums.EnumerationException if an appropriate
    *  enumeration value is not found.
+   * @deprecated Use {@link MetadataTools#getBinning(String)}.
    */
+  @Deprecated
   protected Binning getBinning(String value) throws FormatException {
-    BinningEnumHandler handler = new BinningEnumHandler();
-    try {
-      return (Binning) handler.getEnumeration(value);
-    }
-    catch (EnumerationException e) {
-      throw new FormatException("Binning creation failed", e);
-    }
+    return MetadataTools.getBinning(value);
   }
   /**
    * Retrieves an {@link ome.xml.model.enums.Compression} enumeration
@@ -1529,15 +1548,11 @@ public abstract class FormatReader extends FormatHandler
    *
    * @throws ome.xml.model.enums.EnumerationException if an appropriate
    *  enumeration value is not found.
+   * @deprecated Use {@link MetadataTools#getCompression(String)}.
    */
+  @Deprecated
   protected Compression getCompression(String value) throws FormatException {
-    CompressionEnumHandler handler = new CompressionEnumHandler();
-    try {
-      return (Compression) handler.getEnumeration(value);
-    }
-    catch (EnumerationException e) {
-      throw new FormatException("Compression creation failed", e);
-    }
+    return MetadataTools.getCompression(value);
   }
   /**
    * Retrieves an {@link ome.xml.model.enums.ContrastMethod} enumeration
@@ -1545,17 +1560,12 @@ public abstract class FormatReader extends FormatHandler
    *
    * @throws ome.xml.model.enums.EnumerationException if an appropriate
    *  enumeration value is not found.
+   * @deprecated Use {@link MetadataTools#getContrastMethod(String)}.
    */
+  @Deprecated
   protected ContrastMethod getContrastMethod(String value)
-    throws FormatException
-  {
-    ContrastMethodEnumHandler handler = new ContrastMethodEnumHandler();
-    try {
-      return (ContrastMethod) handler.getEnumeration(value);
-    }
-    catch (EnumerationException e) {
-      throw new FormatException("ContrastMethod creation failed", e);
-    }
+    throws FormatException {
+    return MetadataTools.getContrastMethod(value);
   }
   /**
    * Retrieves an {@link ome.xml.model.enums.Correction} enumeration
@@ -1563,15 +1573,11 @@ public abstract class FormatReader extends FormatHandler
    *
    * @throws ome.xml.model.enums.EnumerationException if an appropriate
    *  enumeration value is not found.
+   * @deprecated Use {@link MetadataTools#getCorrection(String)}.
    */
+  @Deprecated
   protected Correction getCorrection(String value) throws FormatException {
-    CorrectionEnumHandler handler = new CorrectionEnumHandler();
-    try {
-      return (Correction) handler.getEnumeration(value);
-    }
-    catch (EnumerationException e) {
-      throw new FormatException("Correction creation failed", e);
-    }
+    return MetadataTools.getCorrection(value);
   }
   /**
    * Retrieves an {@link ome.xml.model.enums.DetectorType} enumeration
@@ -1579,15 +1585,11 @@ public abstract class FormatReader extends FormatHandler
    *
    * @throws ome.xml.model.enums.EnumerationException if an appropriate
    *  enumeration value is not found.
+   * @deprecated Use {@link MetadataTools#getDetectorType(String)}.
    */
+  @Deprecated
   protected DetectorType getDetectorType(String value) throws FormatException {
-    DetectorTypeEnumHandler handler = new DetectorTypeEnumHandler();
-    try {
-      return (DetectorType) handler.getEnumeration(value);
-    }
-    catch (EnumerationException e) {
-      throw new FormatException("DetectorType creation failed", e);
-    }
+    return MetadataTools.getDetectorType(value);
   }
   /**
    * Retrieves an {@link ome.xml.model.enums.DimensionOrder} enumeration
@@ -1595,17 +1597,12 @@ public abstract class FormatReader extends FormatHandler
    *
    * @throws ome.xml.model.enums.EnumerationException if an appropriate
    *  enumeration value is not found.
+   * @deprecated Use {@link MetadataTools#getDimensionOrder(String)}.
    */
+  @Deprecated
   protected DimensionOrder getDimensionOrder(String value)
-    throws FormatException
-  {
-    DimensionOrderEnumHandler handler = new DimensionOrderEnumHandler();
-    try {
-      return (DimensionOrder) handler.getEnumeration(value);
-    }
-    catch (EnumerationException e) {
-      throw new FormatException("DimensionOrder creation failed", e);
-    }
+    throws FormatException {
+    return MetadataTools.getDimensionOrder(value);
   }
   /**
    * Retrieves an {@link ome.xml.model.enums.ExperimentType} enumeration
@@ -1613,17 +1610,12 @@ public abstract class FormatReader extends FormatHandler
    *
    * @throws ome.xml.model.enums.EnumerationException if an appropriate
    *  enumeration value is not found.
+   * @deprecated Use {@link MetadataTools#getExperimentType(String)}.
    */
+  @Deprecated
   protected ExperimentType getExperimentType(String value)
-    throws FormatException
-  {
-    ExperimentTypeEnumHandler handler = new ExperimentTypeEnumHandler();
-    try {
-      return (ExperimentType) handler.getEnumeration(value);
-    }
-    catch (EnumerationException e) {
-      throw new FormatException("ExperimentType creation failed", e);
-    }
+    throws FormatException {
+    return MetadataTools.getExperimentType(value);
   }
   /**
    * Retrieves an {@link ome.xml.model.enums.FilamentType} enumeration
@@ -1631,15 +1623,11 @@ public abstract class FormatReader extends FormatHandler
    *
    * @throws ome.xml.model.enums.EnumerationException if an appropriate
    *  enumeration value is not found.
+   * @deprecated Use {@link MetadataTools#getFilamentType(String)}.
    */
+  @Deprecated
   protected FilamentType getFilamentType(String value) throws FormatException {
-    FilamentTypeEnumHandler handler = new FilamentTypeEnumHandler();
-    try {
-      return (FilamentType) handler.getEnumeration(value);
-    }
-    catch (EnumerationException e) {
-      throw new FormatException("FilamentType creation failed", e);
-    }
+    return MetadataTools.getFilamentType(value);
   }
   /**
    * Retrieves an {@link ome.xml.model.enums.FillRule} enumeration
@@ -1647,15 +1635,11 @@ public abstract class FormatReader extends FormatHandler
    *
    * @throws ome.xml.model.enums.EnumerationException if an appropriate
    *  enumeration value is not found.
+   * @deprecated Use {@link MetadataTools#getFillRule(String)}.
    */
+  @Deprecated
   protected FillRule getFillRule(String value) throws FormatException {
-    FillRuleEnumHandler handler = new FillRuleEnumHandler();
-    try {
-      return (FillRule) handler.getEnumeration(value);
-    }
-    catch (EnumerationException e) {
-      throw new FormatException("FillRule creation failed", e);
-    }
+    return MetadataTools.getFillRule(value);
   }
   /**
    * Retrieves an {@link ome.xml.model.enums.FilterType} enumeration
@@ -1663,15 +1647,11 @@ public abstract class FormatReader extends FormatHandler
    *
    * @throws ome.xml.model.enums.EnumerationException if an appropriate
    *  enumeration value is not found.
+   * @deprecated Use {@link MetadataTools#getFilterType(String)}.
    */
+  @Deprecated
   protected FilterType getFilterType(String value) throws FormatException {
-    FilterTypeEnumHandler handler = new FilterTypeEnumHandler();
-    try {
-      return (FilterType) handler.getEnumeration(value);
-    }
-    catch (EnumerationException e) {
-      throw new FormatException("FilterType creation failed", e);
-    }
+    return MetadataTools.getFilterType(value);
   }
   /**
    * Retrieves an {@link ome.xml.model.enums.FontFamily} enumeration
@@ -1679,15 +1659,11 @@ public abstract class FormatReader extends FormatHandler
    *
    * @throws ome.xml.model.enums.EnumerationException if an appropriate
    *  enumeration value is not found.
+   * @deprecated Use {@link MetadataTools#getFontFamily(String)}.
    */
+  @Deprecated
   protected FontFamily getFontFamily(String value) throws FormatException {
-    FontFamilyEnumHandler handler = new FontFamilyEnumHandler();
-    try {
-      return (FontFamily) handler.getEnumeration(value);
-    }
-    catch (EnumerationException e) {
-      throw new FormatException("FontFamily creation failed", e);
-    }
+    return MetadataTools.getFontFamily(value);
   }
   /**
    * Retrieves an {@link ome.xml.model.enums.FontStyle} enumeration
@@ -1695,15 +1671,11 @@ public abstract class FormatReader extends FormatHandler
    *
    * @throws ome.xml.model.enums.EnumerationException if an appropriate
    *  enumeration value is not found.
+   * @deprecated Use {@link MetadataTools#getFontStyle(String)}.
    */
+  @Deprecated
   protected FontStyle getFontStyle(String value) throws FormatException {
-    FontStyleEnumHandler handler = new FontStyleEnumHandler();
-    try {
-      return (FontStyle) handler.getEnumeration(value);
-    }
-    catch (EnumerationException e) {
-      throw new FormatException("FontStyle creation failed", e);
-    }
+    return MetadataTools.getFontStyle(value);
   }
   /**
    * Retrieves an {@link ome.xml.model.enums.IlluminationType} enumeration
@@ -1711,17 +1683,12 @@ public abstract class FormatReader extends FormatHandler
    *
    * @throws ome.xml.model.enums.EnumerationException if an appropriate
    *  enumeration value is not found.
+   * @deprecated Use {@link MetadataTools#getIlluminationType(String)}.
    */
+  @Deprecated
   protected IlluminationType getIlluminationType(String value)
-    throws FormatException
-  {
-    IlluminationTypeEnumHandler handler = new IlluminationTypeEnumHandler();
-    try {
-      return (IlluminationType) handler.getEnumeration(value);
-    }
-    catch (EnumerationException e) {
-      throw new FormatException("IlluminationType creation failed", e);
-    }
+    throws FormatException {
+    return MetadataTools.getIlluminationType(value);
   }
   /**
    * Retrieves an {@link ome.xml.model.enums.Immersion} enumeration
@@ -1729,15 +1696,11 @@ public abstract class FormatReader extends FormatHandler
    *
    * @throws ome.xml.model.enums.EnumerationException if an appropriate
    *  enumeration value is not found.
+   * @deprecated Use {@link MetadataTools#getImmersion(String)}.
    */
+  @Deprecated
   protected Immersion getImmersion(String value) throws FormatException {
-    ImmersionEnumHandler handler = new ImmersionEnumHandler();
-    try {
-      return (Immersion) handler.getEnumeration(value);
-    }
-    catch (EnumerationException e) {
-      throw new FormatException("Immersion creation failed", e);
-    }
+    return MetadataTools.getImmersion(value);
   }
   /**
    * Retrieves an {@link ome.xml.model.enums.LaserMedium} enumeration
@@ -1745,15 +1708,11 @@ public abstract class FormatReader extends FormatHandler
    *
    * @throws ome.xml.model.enums.EnumerationException if an appropriate
    *  enumeration value is not found.
+   * @deprecated Use {@link MetadataTools#getLaserMedium(String)}.
    */
+  @Deprecated
   protected LaserMedium getLaserMedium(String value) throws FormatException {
-    LaserMediumEnumHandler handler = new LaserMediumEnumHandler();
-    try {
-      return (LaserMedium) handler.getEnumeration(value);
-    }
-    catch (EnumerationException e) {
-      throw new FormatException("LaserMedium creation failed", e);
-    }
+    return MetadataTools.getLaserMedium(value);
   }
   /**
    * Retrieves an {@link ome.xml.model.enums.LaserType} enumeration
@@ -1761,15 +1720,11 @@ public abstract class FormatReader extends FormatHandler
    *
    * @throws ome.xml.model.enums.EnumerationException if an appropriate
    *  enumeration value is not found.
+   * @deprecated Use {@link MetadataTools#getLaserType(String)}.
    */
+  @Deprecated
   protected LaserType getLaserType(String value) throws FormatException {
-    LaserTypeEnumHandler handler = new LaserTypeEnumHandler();
-    try {
-      return (LaserType) handler.getEnumeration(value);
-    }
-    catch (EnumerationException e) {
-      throw new FormatException("LaserType creation failed", e);
-    }
+    return MetadataTools.getLaserType(value);
   }
   /**
    * Retrieves an {@link ome.xml.model.enums.Marker} enumeration
@@ -1777,15 +1732,11 @@ public abstract class FormatReader extends FormatHandler
    *
    * @throws ome.xml.model.enums.EnumerationException if an appropriate
    *  enumeration value is not found.
+   * @deprecated Use {@link MetadataTools#getMarker(String)}.
    */
+  @Deprecated
   protected Marker getMarker(String value) throws FormatException {
-    MarkerEnumHandler handler = new MarkerEnumHandler();
-    try {
-      return (Marker) handler.getEnumeration(value);
-    }
-    catch (EnumerationException e) {
-      throw new FormatException("Marker creation failed", e);
-    }
+    return MetadataTools.getMarker(value);
   }
   /**
    * Retrieves an {@link ome.xml.model.enums.Medium} enumeration
@@ -1793,15 +1744,11 @@ public abstract class FormatReader extends FormatHandler
    *
    * @throws ome.xml.model.enums.EnumerationException if an appropriate
    *  enumeration value is not found.
+   * @deprecated Use {@link MetadataTools#getMedium(String)}.
    */
+  @Deprecated
   protected Medium getMedium(String value) throws FormatException {
-    MediumEnumHandler handler = new MediumEnumHandler();
-    try {
-      return (Medium) handler.getEnumeration(value);
-    }
-    catch (EnumerationException e) {
-      throw new FormatException("Medium creation failed", e);
-    }
+    return MetadataTools.getMedium(value);
   }
   /**
    * Retrieves an {@link ome.xml.model.enums.MicrobeamManipulationType}
@@ -1809,18 +1756,12 @@ public abstract class FormatReader extends FormatHandler
    *
    * @throws ome.xml.model.enums.EnumerationException if an appropriate
    *  enumeration value is not found.
+   * @deprecated Use {@link MetadataTools#getMicrobeamManipulationType(String)}.
    */
+  @Deprecated
   protected MicrobeamManipulationType getMicrobeamManipulationType(String value)
-    throws FormatException
-  {
-    MicrobeamManipulationTypeEnumHandler handler =
-      new MicrobeamManipulationTypeEnumHandler();
-    try {
-      return (MicrobeamManipulationType) handler.getEnumeration(value);
-    }
-    catch (EnumerationException e) {
-      throw new FormatException("MicrobeamManipulationType creation failed", e);
-    }
+    throws FormatException {
+    return MetadataTools.getMicrobeamManipulationType(value);
   }
   /**
    * Retrieves an {@link ome.xml.model.enums.MicroscopeType} enumeration
@@ -1828,17 +1769,12 @@ public abstract class FormatReader extends FormatHandler
    *
    * @throws ome.xml.model.enums.EnumerationException if an appropriate
    *  enumeration value is not found.
+   * @deprecated Use {@link MetadataTools#getMicroscopeType(String)}.
    */
+  @Deprecated
   protected MicroscopeType getMicroscopeType(String value)
-    throws FormatException
-  {
-    MicroscopeTypeEnumHandler handler = new MicroscopeTypeEnumHandler();
-    try {
-      return (MicroscopeType) handler.getEnumeration(value);
-    }
-    catch (EnumerationException e) {
-      throw new FormatException("MicroscopeType creation failed", e);
-    }
+    throws FormatException {
+    return MetadataTools.getMicroscopeType(value);
   }
   /**
    * Retrieves an {@link ome.xml.model.enums.NamingConvention} enumeration
@@ -1846,17 +1782,12 @@ public abstract class FormatReader extends FormatHandler
    *
    * @throws ome.xml.model.enums.EnumerationException if an appropriate
    *  enumeration value is not found.
+   * @deprecated Use {@link MetadataTools#getNamingConvention(String)}.
    */
+  @Deprecated
   protected NamingConvention getNamingConvention(String value)
-    throws FormatException
-  {
-    NamingConventionEnumHandler handler = new NamingConventionEnumHandler();
-    try {
-      return (NamingConvention) handler.getEnumeration(value);
-    }
-    catch (EnumerationException e) {
-      throw new FormatException("NamingConvention creation failed", e);
-    }
+    throws FormatException {
+    return MetadataTools.getNamingConvention(value);
   }
   /**
    * Retrieves an {@link ome.xml.model.enums.PixelType} enumeration
@@ -1864,15 +1795,11 @@ public abstract class FormatReader extends FormatHandler
    *
    * @throws ome.xml.model.enums.EnumerationException if an appropriate
    *  enumeration value is not found.
+   * @deprecated Use {@link MetadataTools#getPixelType(String)}.
    */
+  @Deprecated
   protected PixelType getPixelType(String value) throws FormatException {
-    PixelTypeEnumHandler handler = new PixelTypeEnumHandler();
-    try {
-      return (PixelType) handler.getEnumeration(value);
-    }
-    catch (EnumerationException e) {
-      throw new FormatException("PixelType creation failed", e);
-    }
+    return MetadataTools.getPixelType(value);
   }
   /**
    * Retrieves an {@link ome.xml.model.enums.Pulse} enumeration
@@ -1880,15 +1807,11 @@ public abstract class FormatReader extends FormatHandler
    *
    * @throws ome.xml.model.enums.EnumerationException if an appropriate
    *  enumeration value is not found.
+   * @deprecated Use {@link MetadataTools#getPulse(String)}.
    */
+  @Deprecated
   protected Pulse getPulse(String value) throws FormatException {
-    PulseEnumHandler handler = new PulseEnumHandler();
-    try {
-      return (Pulse) handler.getEnumeration(value);
-    }
-    catch (EnumerationException e) {
-      throw new FormatException("Pulse creation failed", e);
-    }
+    return MetadataTools.getPulse(value);
   }
 
   /**
@@ -1905,6 +1828,11 @@ public abstract class FormatReader extends FormatHandler
     transform.setA01(Math.sin(theta));
     transform.setA10(-1 * Math.sin(theta));
     return transform;
+  }
+
+  private boolean isOmero(String id) {
+    return id != null && id.toLowerCase().startsWith("omero:") &&
+    id.indexOf("\n") > 0;
   }
 
 }
